--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,11 +10,15 @@
 #  an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
 #  specific language governing permissions and limitations under the License.
 #
-
+server.port=2355
 spring.application.name=conductor
 springdoc.api-docs.path=/api-docs
 
-conductor.db.type=memory
+conductor.db.type=mysql
+
+spring.datasource.url=jdbc:mysql://localhost:3307/conductor
+spring.datasource.username=conductor
+spring.datasource.password=conductor
 
 conductor.indexing.enabled=false
 
